--- a/medium/index.html
+++ b/medium/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>JS Game Challenge</title>
   <style type="text/css">
     .hide {
@@ -52,6 +53,7 @@
     </div>
     <div class="clear"></div>
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="assets/javascript/medium.js"></script>
 </body>
 </html>
