--- a/medium/index.html
+++ b/medium/index.html
@@ -40,7 +40,7 @@
       </div>
     </div>
     <div class="right">
-      <h2>
+      <h2 id="teamtwo-banner">
         Team 2
       </h2>
       <div class="hits">
