Moved all styling to CSS file

--- a/medium/index.html
+++ b/medium/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="assets/css/app.css">
 <head>
   <meta charset="UTF-8">
   <title>JS Game Challenge</title>
@@ -19,10 +20,12 @@
   </style>
 </head>
 <body>
-  <div style="width: 700px;margin: 0 auto;">
-    <h1 style="margin-bottom:5px">Hockey, JavaScript, and jQuery oh My!</h1>
-    <h2 style="margin-top: 0">...the game!</h2>
-    <div style="margin: 0 auto;text-align:center">
+  <div id="main">
+    <h1 id="firstHeader">Sports Ball!</h1>
+    <h2 id="secondHeader">...the game!</h2>
+    <div id="sportsball">
+      <img id="logo" src="assets/images/sportsball.jpg"/>
+    <br><br>
       <button id="reset">RESET</button><br>
       NUMBER OF RESETS: <span id="num-resets">0</span>
     </div>
