Changing to game.css

--- a/medium/index.html
+++ b/medium/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="assets/css/app.css">
+<link rel="stylesheet" href="assets/css/game.css">
 <head>
   <meta charset="UTF-8">
   <title>JS Game Challenge</title>
